[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hive_api"
version = "0.0.6"
dependencies = [
    "gradio_client",
    "paho-mqtt",
    "langgraph",
    "requests",
    "ollama"
    "pillow"
]

[project.urls]
Homepage = "https://github.com/ngargaud/hive-api"
Issues = "https://github.com/ngargaud/hive-api/issues"
