[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hive_api"
version = "0.0.4"
dependencies = [
    "gradio_client",
    "requests",
    "ollama",
    "asyncio",
    "asyncvnc"
]

[project.urls]
Homepage = "https://github.com/ngargaud/hive-api"
Issues = "https://github.com/ngargaud/hive-api/issues"
